# shurly-url-shortener

./: .gitignore  PROJE-RAPORU.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_users_auth.sql  003_url_owner_email.sql
backend/src/: cache.rs  config.rs  db.rs  error.rs  main.rs  models.rs
backend/src/handlers/: admin.rs  mod.rs  qr.rs  redirect.rs  shorten.rs  stats.rs
backend/src/middleware/: rate_limit.rs
bench/: README.md  redirect.lua  run.sh  seed.ps1  seed.sh  shorten.lua
frontend/: Dockerfile  package-lock.json  package.json  server.js
frontend/public/css/: style.css
frontend/public/js/: admin.js  history.js  home.js  main.js  stats.js
frontend/views/: admin.ejs  auth.ejs  error.ejs  history.ejs  index.ejs  stats.ejs
frontend/views/partials/: footer.ejs  header.ejs
