[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"
authors = ["Student"]
description = "Yuksek performansli URL kisaltma servisi - Rust + Actix-Web"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"

# Database (compile-time SQL check destekli)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }

# Redis cache
redis = { version = "0.24", features = ["tokio-comp", "aio", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
nanoid = "0.4"
url = "2.5"

# QR kod uretimi (SVG cikis - vektorel, kucuk boyut)
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Configuration
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Concurrency primitives (rate limit icin)
dashmap = "5.5"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
